# hilllab

./: .gitignore  MANIFEST.in  __init__.py  __version__.py  hilllab.sln  pyproject.toml  requirements.txt  setup.py
3dfm/: 4test.vfd.mat  554.vfd.mat  5test.vfd.mat  798.vfd.mat  999.vfd.mat  DACoperator.m  __init__.py  compile_memmap_video.asv  compile_memmap_video.m  fsd.vfd.mat  goi.vfd.mat  kki.vfd.mat  lkl.vfd.mat  news.vfd.mat  print_message.m  record_realtime_track.asv  record_synced_video.m  show_camera_formats.m  test.vfd.mat  timestamp_0001.mat  varforce_drive.m  varforce_drive_synced_gui.m  varforce_drive_synced_gui.mlapp  vid2.vfd.mat
archive/: A_autotrack_videos.py  record_video_new_camera.m
autotracker/: __init__.py  autotrack_select_paths.py  autotrack_synced_videos.py  autotrack_videos.py  autotrack_videos_parameter_test.py
beads/: __init__.py  plot_component_trace.py  plot_xy.py  plot_xy_maximize.py
cilia/: CBF.ipynb  __init__.py  analyze_motion.py  batch_calculate_CBF_FFCA.py  calculate_CBF.m  calculate_CBF_FFCA.py  cbfPullOnly.m  chunkGet_CBF_and_pctCilia.asv  chunkGet_CBF_and_pctCilia.m  classify_motion.py  gtest_series.mat  multi_test.py  test_series.mat
documentation/: AutoTracker Manual.docx  conf.py  hilllab.md  index.rst  main.md
hilllab/: README.md  __init__.py
interfaces/: autotracker.ipynb  autotracker_parameter_test.ipynb
magnets/: varforce_drive_synced_gui.mlapp
migration/: Bundle.py  __init__.py  _plate_calculate_gaussian.py  _plate_copy_statistic.py  _plate_format_extended.py  _plate_load_wrapper.py  _plate_prepare_data.py  (+7 more)
(+189 files in other folders)
