[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hilllab"
version = "1.1.2.251013"
description = "Code used in the David Hill Lab in the Marsico Lung Institute at UNC-CH"
authors = [{name = "Christopher Esther"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["hilllab*"]
